fix z-index for backdrop

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -129,6 +129,7 @@
 
 .backdrop {
   position: fixed;
+  z-index: 999999999;
   top: 0;
   left: 0;
   width: 100%;
